Design on Repeater

--- a/public/css/ecb-elementor-custom-widget-repeater.css
+++ b/public/css/ecb-elementor-custom-widget-repeater.css
@@ -14,3 +14,15 @@
 .acf-repeater .image-holder {
     flex: 0 0 30%;
 }
+
+
+@media only screen and (min-width: 40.063em) {
+
+    .acf-repeater li {
+        flex-wrap: wrap;
+    }
+    .acf-repeater .image-holder {
+        flex: 0 0 100%;
+    }
+
+}
