--- a/public/css/ecb-elementor-custom-widget-repeater.css
+++ b/public/css/ecb-elementor-custom-widget-repeater.css
@@ -7,22 +7,26 @@
     list-style: none !important;
     padding: 0;
 }
-.acf-repeater li {
+.acf-repeater ul li {
     display: flex;
     margin-bottom: 15px;
 }
-.acf-repeater .image-holder {
+.acf-repeater ul li .image-holder {
     flex: 0 0 30%;
 }
+.acf-repeater ul li .image-holder img {
+    width: 100%;
+}
 
-
-@media only screen and (min-width: 40.063em) {
+@media (max-width: 980px) {
 
     .acf-repeater li {
         flex-wrap: wrap;
+        margin-bottom: 20px;
     }
-    .acf-repeater .image-holder {
+    .acf-repeater ul li .image-holder {
         flex: 0 0 100%;
     }
+    
 
 }
